@@ -1,28 +1,0 @@
-Changes
-MANIFEST
-META.yml
-Makefile.PL
-README
-lib/Config/Grammar.pm
-lib/Config/Grammar/Document.pm
-lib/Config/Grammar/Dynamic.pm
-t/DebugDump.pm
-t/dyn.t
-t/dyn1.cfg
-t/dyn2.cfg
-t/dyn2.dump
-t/dyn2.pod
-t/dyn2.templ
-t/example.conf
-t/example.parsed
-t/example.pod
-t/example.t
-t/example.tmpl
-t/inherit.cfg
-t/inherit.dump
-t/inherit.pod
-t/inherit.t
-t/inherit.templ
-t/sub_error.t
-t/sub_error1.conf
-t/sub_error2.conf
