@@ -1,11 +1,0 @@
-use ExtUtils::MakeMaker;
-# See lib/ExtUtils/MakeMaker.pm for details of how to influence
-# the contents of the Makefile that is written.
-WriteMakefile(
-    'NAME'		=> 'Config::Grammar',
-    'VERSION_FROM'	=> 'lib/Config/Grammar.pm', # finds $VERSION
-    'PREREQ_PM'		=> {}, # e.g., Module::Name => 1.1
-    ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
-      (ABSTRACT_FROM => 'lib/Config/Grammar.pm', # retrieve abstract from module
-       AUTHOR     => 'David Schweikert') : ()),
-);
